docs/_apps/spacy-wrapper/v1/index.md
---
layout: posts
classes: wide
title: "CLAMS wrapper for spaCy NLP (v1)"
date: 2023-05-19T22:02:23+00:00
---
## About this version

- Submitter: [keighrim](https://github.com/keighrim)
- Submission Time: 2023-05-19T22:02:23+00:00
- Prebuilt Container Image: [ghcr.io/clamsproject/app-spacy-wrapper:v1](https://github.com/clamsproject/app-spacy-wrapper/pkgs/container/app-spacy-wrapper/v1)<button class="copy-btn" data-clip="ghcr.io/clamsproject/app-spacy-wrapper:v1" title="Copy image tag" aria-label="Copy image tag">&#128203;</button>
- Release Notes

    (no notes provided by the developer)

## About this app (See raw [metadata.json](metadata.json))

**Apply spaCy NLP to all text documents in a MMIF file.**

- App ID: [http://apps.clams.ai/spacy-wrapper/v1](http://apps.clams.ai/spacy-wrapper/v1)
- App License: Apache 2.0
- Source Repository: [https://github.com/clamsproject/app-spacy-wrapper](https://github.com/clamsproject/app-spacy-wrapper) ([source tree of the submitted version](https://github.com/clamsproject/app-spacy-wrapper/tree/v1)<button class="copy-btn" data-clip="https://github.com/clamsproject/app-spacy-wrapper/tree/v1" title="Copy source URL" aria-label="Copy source URL">&#128203;</button>)
- Analyzer Version: 3.1.2
- Analyzer License: MIT


#### Inputs
(**Note**: "*" as a property value means that the property is required but can be any value.)

- [http://mmif.clams.ai/vocabulary/TextDocument/v1](http://mmif.clams.ai/vocabulary/TextDocument/v1) (required)
(of any properties)

- [http://vocab.lappsgrid.org/Token](http://vocab.lappsgrid.org/Token)
(of any properties)



#### Configurable Parameters
(**Note**: _Multivalued_ means the parameter can have one or more values.)

- `pretokenized`: optional, defaults to `false`

    - Type: boolean
    - Multivalued: False
    - Choices: **_`false`_**, `true`


    > Boolean parameter to set the app to use existing tokenization, if available, for text documents for NLP processing. Useful to process ASR documents, for example.


#### Outputs
(**Note**: "*" as a property value means that the property is required but can be any value.)

(**Note**: Not all output annotations are always generated.)

- [http://vocab.lappsgrid.org/Token](http://vocab.lappsgrid.org/Token)
(of any properties)

- [http://vocab.lappsgrid.org/Token#pos](http://vocab.lappsgrid.org/Token#pos)
(of any properties)

- [http://vocab.lappsgrid.org/Token#lemma](http://vocab.lappsgrid.org/Token#lemma)
(of any properties)

- [http://vocab.lappsgrid.org/NounChunk](http://vocab.lappsgrid.org/NounChunk)
(of any properties)

- [http://vocab.lappsgrid.org/Sentence](http://vocab.lappsgrid.org/Sentence)
(of any properties)

- [http://vocab.lappsgrid.org/NamedEntity](http://vocab.lappsgrid.org/NamedEntity)
(of any properties)

